Bug 820841 - Cache the document URI on the window so that DOMParser() can refer. r=bz